second sections done

--- a/index.html
+++ b/index.html
@@ -40,12 +40,31 @@
             <article class="first-feature">
                 <div class="text">
                     <h3>Made easy. Integration with your favorite tools.</h3>
-                    <p>We’ve made effortless to connect our service with third apps allowing you to focus only on your business</p>
+                    <p>We’ve made effortless to connect our service with third apps allowing you to focus only on your
+                        business</p>
                 </div>
                 <div class="image">
                     <img src="img/main-feature.png" alt="main-feature">
                 </div>
             </article>
+            <div>
+                <article class="second-feature">
+                    <div class="text">
+                        <h3>Real data. Live insights visualisation.</h3>
+                    </div>
+                    <div class="image">
+                        <img src="img/graph.png" alt="graph">
+                    </div>
+                </article>
+                <article class="third-feature">
+                    <div class="text">
+                        <h3>Keep control. Manage everything from A to Z</h3>
+                    </div>
+                    <div class="image">
+                        <img src="img/data-graph.png" alt="graph">
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 </body>
