--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                         audience</p>
                 </div>
                 <div class="presentation-image">
-                    <!-- <img src="img/presentation-phone.png" alt="presentation"> -->
                 </div>
             </div>
             <h2>Integrated. Live. Control.</h2>
@@ -45,6 +44,9 @@
                 </div>
                 <div class="image">
                     <img src="img/main-feature.png" alt="main-feature">
+                </div>
+                <div class="call-to-action">
+                    <button>Learn More</button>
                 </div>
             </article>
             <div>
