premium sections done

--- a/index.html
+++ b/index.html
@@ -68,6 +68,54 @@
                 </article>
             </div>
         </section>
+        <section class="premium-features">
+            <h2>Premium features</h2>
+            <div class="call-to-action">
+                <button>Contact sales <img src="img/arrow.svg" alt="arrow"></button>
+            </div>
+            <div class="feature">
+                <img src="img/game.svg" alt="game">
+                <div class="feature-text">
+                    <h4>API</h4>
+                    <p>Get access to our API and develop your own plugins and enjoy Byit at the fullest.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img src="img/question.svg" alt="question">
+                <div class="feature-text">
+                    <h4>In-app chat</h4>
+                    <p>Facing a bug or in doubt with a feature, contact our support team in the app. 24/7</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img src="img/translate.svg" alt="translate">
+                <div class="feature-text">
+                    <h4>Auto-translate</h4>
+                    <p>Operating in different countries? No worries. We support 10+ languages</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img src="img/cloud.svg" alt="cloud">
+                <div class="feature-text">
+                    <h4>Cloud first</h4>
+                    <p>Upgrade your solution by storing data, personalising content in the cloud.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img src="img/notification.svg" alt="notification">
+                <div class="feature-text">
+                    <h4>Notifications</h4>
+                    <p>Receive all the latest news from us and never miss out an opportunity to grow</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img src="img/recommendation.svg" alt="recommendation">
+                <div class="feature-text">
+                    <h4>Recommendations</h4>
+                    <p>AI powered suggestions for your business based on data, previous sales and objectives</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
