add lastest release + fix nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <a href="">
             <img src="img/logo.png" alt="logo">
-            <p>Byit</p>
+            <h2>Byit</h2>
         </a>
         <ul>
 
@@ -115,6 +115,19 @@
                     <p>AI powered suggestions for your business based on data, previous sales and objectives</p>
                 </div>
             </div>
+            <article class="lastest-release">
+                <div class="text">
+                    <div class="news">
+                        <p>Lastest release</p>
+                    </div>
+                    <h3>Integrated SEO tools to generate valuable traffic on your site</h3>
+                    <p>Search engine optimization is a low-hanging fruit for ecommerce websites we have made it easy to grow high-converting traffic</p>
+                </div>
+                <div class="image">
+                    <img src="img/google.png" alt="google">
+                </div>
+                
+            </article>
         </section>
     </main>
 </body>
