pricing without svg and bug width

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
             <h2>Integrated. Live. Control.</h2>
         </section>
+        <!-- END OF THE PRESENTATION SECTION -->
         <section class="main-features">
             <article class="first-feature">
                 <div class="text">
@@ -68,6 +69,7 @@
                 </article>
             </div>
         </section>
+        <!-- END OF THE MAIN FEATURES SECTION -->
         <section class="premium-features">
             <h2>Premium features</h2>
             <div class="call-to-action">
@@ -128,6 +130,64 @@
                 </div>
                 
             </article>
+        </section>
+        <!-- END OF THE PREMIUM SECTION -->
+        <section class="pricing">
+            <h3>Get started now. It’s free.</h3>
+            <p>With a free trial you get to access all features for 14 days. Give it a shot!</p>
+            <div class="call-to-action">
+                <button>Start trial period</button>
+            </div>
+            <div class="offers">
+                <article>
+                    <h5>Starter</h5>
+                    <div class="price">
+                        <p>$2</p>
+                        <span>/month</span>
+                    </div>
+                    <ul>
+                        <li><img src="img/question.svg" alt="question">1 project</li>
+                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
+                        <li><img src="img/question.svg" alt="question">Customer support</li>
+                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                    </ul>
+                    <div class="call-to-action">
+                        <button>Choose</button>
+                    </div>
+                </article>
+                <article>
+                    <h5>Regular</h5>
+                    <div class="price">
+                        <p>$10</p>
+                        <span>/month</span>
+                    </div>
+                    <ul>
+                        <li><img src="img/question.svg" alt="question">Unlimited projects</li>
+                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
+                        <li><img src="img/question.svg" alt="question">Customer support</li>
+                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                    </ul>
+                    <div class="call-to-action">
+                        <button>Choose</button>
+                    </div>
+                </article>
+                <article>
+                    <h5>Premium</h5>
+                    <div class="price">
+                        <p>$16</p>
+                        <span>/month</span>
+                    </div>
+                    <ul>
+                        <li><img src="img/question.svg" alt="question">Unlimited projects</li>
+                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
+                        <li><img src="img/question.svg" alt="question">Customer support</li>
+                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                    </ul>
+                    <div class="call-to-action">
+                        <button>Choose</button>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 </body>
