add blog section + add svg for pricing

--- a/index.html
+++ b/index.html
@@ -123,12 +123,13 @@
                         <p>Lastest release</p>
                     </div>
                     <h3>Integrated SEO tools to generate valuable traffic on your site</h3>
-                    <p>Search engine optimization is a low-hanging fruit for ecommerce websites we have made it easy to grow high-converting traffic</p>
+                    <p>Search engine optimization is a low-hanging fruit for ecommerce websites we have made it easy to
+                        grow high-converting traffic</p>
                 </div>
                 <div class="image">
                     <img src="img/google.png" alt="google">
                 </div>
-                
+
             </article>
         </section>
         <!-- END OF THE PREMIUM SECTION -->
@@ -146,10 +147,10 @@
                         <span>/month</span>
                     </div>
                     <ul>
-                        <li><img src="img/question.svg" alt="question">1 project</li>
-                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
-                        <li><img src="img/question.svg" alt="question">Customer support</li>
-                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                        <li><img src="img/included.svg" alt="included">1 project</li>
+                        <li><img src="img/included.svg" alt="included">Your dashboard</li>
+                        <li><img src="img/not-included.svg" alt="not-included">Customer support</li>
+                        <li><img src="img/not-included.svg" alt="not-included">Premium features</li>
                     </ul>
                     <div class="call-to-action">
                         <button>Choose</button>
@@ -162,10 +163,10 @@
                         <span>/month</span>
                     </div>
                     <ul>
-                        <li><img src="img/question.svg" alt="question">Unlimited projects</li>
-                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
-                        <li><img src="img/question.svg" alt="question">Customer support</li>
-                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                        <li><img src="img/included.svg" alt="included">Unlimited projects</li>
+                        <li><img src="img/included.svg" alt="included">Your dashboard</li>
+                        <li><img src="img/included.svg" alt="included">Customer support</li>
+                        <li><img src="img/not-included.svg" alt="not-included">Premium features</li>
                     </ul>
                     <div class="call-to-action">
                         <button>Choose</button>
@@ -178,10 +179,10 @@
                         <span>/month</span>
                     </div>
                     <ul>
-                        <li><img src="img/question.svg" alt="question">Unlimited projects</li>
-                        <li><img src="img/question.svg" alt="question">Your dashboard</li>
-                        <li><img src="img/question.svg" alt="question">Customer support</li>
-                        <li><img src="img/question.svg" alt="question">Premium features</li>
+                        <li><img src="img/included.svg" alt="included">Unlimited projects</li>
+                        <li><img src="img/included.svg" alt="included">Your dashboard</li>
+                        <li><img src="img/included.svg" alt="included">Customer support</li>
+                        <li><img src="img/included.svg" alt="included">Premium features</li>
                     </ul>
                     <div class="call-to-action">
                         <button>Choose</button>
@@ -189,6 +190,57 @@
                 </article>
             </div>
         </section>
+        <!-- END OF THE PRICING SECTION -->
+        <section class="blog">
+            <div class="blog-section-title">
+                <h2>Latest articles</h2>
+                <div class="call-to-action">
+                    <button>Read our blog <img src="img/arrow.svg" alt="arrow"></button>
+                </div>
+            </div>
+            <div class="list-blog">
+                <article>
+                    <div class="first-blog">
+                        <div class="text-blog">
+                            <div class="theme">
+                                <p>Growth</p>
+                            </div>
+                            <div class="blog-headline">
+                                <span>By Camille 31.12.21 | 6 mins read</span>
+                                <h4>Get insights from our Employees about the culture at Byit.</h4>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="second-blog">
+                        <div class="text-blog">
+                            <div class="theme">
+                                <p>Company</p>
+                            </div>
+                            <div class="blog-headline">
+                                <span>By Alex 10.04.21 | 5 mins read</span>
+                                <h4>How to grow your ecommerce with our platform?</h4>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="third-blog">
+                        <div class="text-blog">
+                            <div class="theme">
+                                <p>Tips</p>
+                            </div>
+                            <div class="blog-headline">
+                                <span>By Dylan 32.12.21 | 10 mins read</span>
+                                <h4>Learn how to create meaningful experiences to leverage your site</h4>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <!-- END OF THE BLOG SECTION -->
     </main>
 </body>
 
