about us section done

--- a/index.html
+++ b/index.html
@@ -241,6 +241,45 @@
             </div>
         </section>
         <!-- END OF THE BLOG SECTION -->
+        <section class="about-us">
+            <div class="about-us-section-title">
+                <h2>About us</h2>
+                <div class="call-to-action">
+                    <button>See open positions <img src="img/arrow.svg" alt="arrow"></button>
+                </div>
+            </div>
+            <article>
+                <div class="text-about-us">
+                    <h3>We are designers, marketers, developers and forward thinkers</h3>
+                    <p>Built upon the mission to make digital sales more personalised, efficient and meaningful we have
+                        formed the company 4 years ago and are growing fast. We are always looking for new talents to
+                        join our headquarters.</p>
+                </div>
+                <div class="team">
+                    <div class="member1">
+                        <img src="img/member1.png" alt="member1">
+                        <div class="member-infos">
+                            <p>Alex Guillemin</p>
+                            <span>CEO & Co-founder</span>
+                        </div>
+                    </div>
+                    <div class="member2">
+                        <img src="img/member2.png" alt="member2">
+                        <div class="member-infos">
+                            <p>Camille Thibert</p>
+                            <span>CFO & Co-founder</span>
+                        </div>
+                    </div>
+                    <div class="member3">
+                        <img src="img/member3.png" alt="member3">
+                        <div class="member-infos">
+                            <p>Charlyne Neau</p>
+                            <span>Senior manager</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 </body>
 
