--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </header>
     <main>
-        <section class="presentation">
+        <section class="presentation" id="section-features">
             <div class="presentation-main">
                 <div class="presentation-text">
                     <h1>Next Generation <br> e-commerce solution <br> for sports retailers</h1>
@@ -133,7 +133,7 @@
             </article>
         </section>
         <!-- END OF THE PREMIUM SECTION -->
-        <section class="pricing">
+        <section class="pricing" id="section-pricing">
             <h3>Get started now. It’s free.</h3>
             <p>With a free trial you get to access all features for 14 days. Give it a shot!</p>
             <div class="call-to-action">
@@ -191,7 +191,7 @@
             </div>
         </section>
         <!-- END OF THE PRICING SECTION -->
-        <section class="blog">
+        <section class="blog" id="section-blog">
             <div class="blog-section-title">
                 <h2>Latest articles</h2>
                 <div class="call-to-action">
@@ -241,7 +241,7 @@
             </div>
         </section>
         <!-- END OF THE BLOG SECTION -->
-        <section class="about-us">
+        <section class="about-us" id="section-about-us">
             <div class="about-us-section-title">
                 <h2>About us</h2>
                 <div class="call-to-action">
@@ -280,7 +280,54 @@
                 </div>
             </article>
         </section>
+        <!-- END OF THE ABOUT US SECTION -->
     </main>
+    <footer>
+        <div class="footer-title">
+            <div class="footer-headline">
+                <div class="logo">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <p>Convinced? Get your brochure now</p>
+            </div>
+            <div class="call-to-action">
+                <button>See open positions <img src="img/arrow.svg" alt="arrow"></button>
+            </div>
+        </div>
+        <div class="footer-content">
+            <div class="infos">
+                <h4>Contact</h4>
+                <ul>
+                    <li>06 78 98 63 78</li>
+                    <li>28 Rue des jonquilles, 75620 Paris</li>
+                    <li>Contact@byit.com</li>
+                    <li>Linkedin/byit.com</li>
+                </ul>
+            </div>
+            <div class="infos">
+                <h4>Pages</h4>
+                <ul>
+                    <li><a href="#section-features">Features</a></li>
+                    <li><a href="#section-pricing">Pricing</a></li>
+                    <li><a href="#section-blog">Blog</a></li>
+                    <li><a href="#section-about-us">About us</a></li>
+                    <li><a href="#section-contact-sales">Contact sales</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact" id="section-contact-sales">
+                <h4>Contact us</h4>
+                <p>Fill in your information below and our <br> sales team will be in touch with you shortly</p>
+                <div class="input-mail">
+                    <input type="email" placeholder="Type your email here...">
+                    <div class="call-to-action">
+                        <button>
+                            <img src="img/arrow.svg" alt="arrow">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
