mobile version done

--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
             <img src="img/logo.png" alt="logo">
             <h2>Byit</h2>
         </a>
-        <ul>
-
+        <div class="openMenu"><img src="img/burger.svg" alt="burger"></div>
+        <ul class="menu">
+            <li><a href="#section-features">Features</a></li>
+            <li><a href="#section-pricing">Pricing</a></li>
+            <li><a href="#section-blog">Blog</a></li>
+            <li><a href="#section-about-us">About us</a></li>
+            <li><a href="#section-contact-sales">Contact sales</a></li>
+            <div class="closeMenu"><img src="img/close-menu.svg" alt="close menu"></i></div>
         </ul>
     </header>
     <main>
-        <section class="presentation" id="section-features">
+        <section class="presentation">
             <div class="presentation-main">
                 <div class="presentation-text">
                     <h1>Next Generation <br> e-commerce solution <br> for sports retailers</h1>
@@ -36,7 +42,7 @@
             <h2>Integrated. Live. Control.</h2>
         </section>
         <!-- END OF THE PRESENTATION SECTION -->
-        <section class="main-features">
+        <section class="main-features" id="section-features">
             <article class="first-feature">
                 <div class="text">
                     <h3>Made easy. Integration with your favorite tools.</h3>
@@ -328,6 +334,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
