menu burger + presentation responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#section-pricing">Pricing</a></li>
             <li><a href="#section-blog">Blog</a></li>
             <li><a href="#section-about-us">About us</a></li>
-            <li><a href="#section-contact-sales">Contact sales</a></li>
+            <li><a href="#section-contact-sales">Contact</a></li>
             <div class="closeMenu"><img src="img/close-menu.svg" alt="close menu"></i></div>
         </ul>
     </header>
