main features responsive

--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
         <!-- END OF THE PRESENTATION SECTION -->
         <section class="main-features" id="section-features">
             <article class="first-feature">
-                <div class="text">
-                    <h3>Made easy. Integration with your favorite tools.</h3>
-                    <p>We’ve made effortless to connect our service with third apps allowing you to focus only on your
-                        business</p>
-                </div>
-                <div class="image">
-                    <img src="img/main-feature.png" alt="main-feature">
+                <div class="first-feature-flex">
+                    <div class="text">
+                        <h3>Made easy. Integration with your favorite tools.</h3>
+                        <p>We’ve made effortless to connect our service with third apps allowing you to focus only on your
+                            business</p>
+                    </div>
+                    <div class="image">
+                        <img src="img/main-feature.png" alt="main-feature">
+                    </div>
                 </div>
                 <div class="call-to-action">
                     <button>Learn More</button>
                 </div>
             </article>
-            <div>
+            <div class="secondary-features">
                 <article class="second-feature">
                     <div class="text">
                         <h3>Real data. Live insights visualisation.</h3>
