--- a/output/theme/index.html
+++ b/output/theme/index.html
@@ -24,10 +24,11 @@
             <li><a href="#section-pricing">Pricing</a></li>
             <li><a href="#section-blog">Blog</a></li>
             <li><a href="#section-about-us">About us</a></li>
-            <li><a href="#section-contact-sales">Contact</a></li>
+            <li class="active"><a href="#section-contact-sales">Contact</a></li>
             <div class="closeMenu"><img src="img/close-menu.svg" alt="close menu"></i></div>
         </ul>
     </header>
+    <!-- END OF HEADER -->
     <main>
         <section class="presentation">
             <div class="presentation-main">
@@ -304,7 +305,7 @@
                 <p>Convinced? Get your brochure now</p>
             </div>
             <div class="call-to-action">
-                <button>See open positions <img src="img/arrow.svg" alt="arrow"></button>
+                <button>Contact sales <img src="img/arrow.svg" alt="arrow"></button>
             </div>
         </div>
         <div class="footer-content">
@@ -341,6 +342,7 @@
             </div>
         </div>
     </footer>
+    <!-- END OF FOOTER -->
     <script src="js/index.js"></script>
 </body>
 
